--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Data": {
     "Northwind": {
-      "ConnectionString": "Server=bitsql.wctc.edu;Database=Northwind_25_JJG;User ID=jgossett1;Password=000546767"
+      "ConnectionString": "Server=bitsql.wctc.edu;Database=Northwind_10025_TJH;User ID=thahn13;Password=000548063"
     },
     "NWIdentity": {
       "ConnectionString": "Server=bitsql.wctc.edu;Database=AppIdentity_25_JJG;User ID=jgossett1;Password=000546767"
